--- a/project.css
+++ b/project.css
@@ -42,22 +42,25 @@
   width: 25px;
 }
 
-/*Up next for Tier 5 only */
 .processSectionTitleUpNext{
   padding-left: 6%;
-  padding-top: 3%;
   width:100%;
   height:110px;
   color:white;
   background-color: rgb(74, 74, 74);
-  margin-top: 3%;
-  padding-left: 6%;
   font-size: 30px;
-  margin-bottom: 3%;
+  padding-top: 3%;
+  margin-top: 3%;
+  text-align: left;
+}
+
+/*Up next for Tier 5 only */
+.processSectionTitleUpNextTier{
+
 }
 /*tier 5 only*/
 @media screen (max-width: 768px) {
-  .processSectionTitleUpNext{
+  .processSectionTitleUpNextTier{
       height:150px;
       padding-bottom: 3%;
   }
@@ -65,17 +68,17 @@
 
 /*Up next for WebMD only */
 .processSectionTitleUpNextWeb{
-  padding-left: 0%;
-  padding-top: 3%;
-  margin-top: 3%;
-  padding-left: 6%;
-  margin-bottom: 3%;
-  text-align: left;
+
 }
 
-@media screen (max-width: 768px) {
-  .processSectionTitleUpNextWeb{
-      /*height:150px;
-      padding-bottom: 0%;*/
+.nextportRight{
+float:right;
+padding-right: 15%;
+}
+
+@media screen (max-width: 767px) {
+  .nextportRight{
+      padding-right: 0%;
+      float:left;
   }
 }
