--- a/temp-file.css
+++ b/temp-file.css
@@ -15,9 +15,9 @@ body{
 }
 /*Emoji LIbs*/
 #emoji{
-  width:85%;
+  width:80%;
   text-align: center;
-  padding-top: 3%;
+  /*padding-top: 3%;*/
 }
 
 .changeBack, h2{
@@ -27,7 +27,6 @@ body{
 #content{
 margin-top: 3%;
 }
-
 
 a{
   text-align: left;
@@ -39,14 +38,13 @@ a{
   width:100%;
   text-align: center;
   margin: 0 auto;
-    font-size: 20px;
-    background-color: rgba(119,140,147, 0.4);
-    /*rgba(207,208,203, 0.5);*/
-    text-align: center;
-    margin-top: 3%;
-    margin-bottom: 4%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+  font-size: 20px;
+  background-color: rgba(119,140,147, 0.4);
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 4%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .des{
