--- a/temp-file.css
+++ b/temp-file.css
@@ -1,6 +1,6 @@
-body{
+/*body{
   text-align: center;
-}
+}*/
 /*webMD*/
 #catburrito{
   width:70%;
@@ -21,14 +21,16 @@ body{
 }
 
 .changeBack, h2{
-  font-size: 36px
+  font-size: 36px;
+  text-align:center;
 }
 
 #content{
 margin-top: 3%;
+text-align: center;
 }
 
-a{
+.source{
   text-align: left;
   display: block;
   margin-left: 15%;
