Update for response

--- a/project.css
+++ b/project.css
@@ -67,11 +67,11 @@
 }
 
 /*Up next for WebMD only */
-.processSectionTitleUpNextWeb{
+/*.processSectionTitleUpNextWeb{
 
-}
+}*/
 
-.nextportRight{
+/*.nextportRight{
 float:right;
 padding-right: 15%;
 }
@@ -81,4 +81,4 @@ padding-right: 15%;
       padding-right: 0%;
       float:left;
   }
-}
+}*/
