--- a/temp-file.css
+++ b/temp-file.css
@@ -52,3 +52,10 @@ text-align: center;
 .des{
   color:rgb(74, 74, 74);
 }
+
+@media screen and (max-width:767px){
+  .floatLeft{
+    float: left;
+    text-align: left;
+  }
+}
