--- a/tier5.css
+++ b/tier5.css
@@ -912,9 +912,15 @@ text-align: center;
   font-weight: bold;
   text-align: center;
 }
+
+.personaParent{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
 .realTimeAndNur2{
   display:inline-block;
-  text-align: center;
+  align-items: center;
 }
 
 .featureMargins{
