--- a/tier5.css
+++ b/tier5.css
@@ -870,6 +870,7 @@ text-align: center;
 .realTimeAndNur2{
   display:inline-block;
   text-align: center;
+  /*margin: 5%;*/
 
 }
 /*.realTimeAndNur2Left{
