--- a/project.css
+++ b/project.css
@@ -22,16 +22,16 @@
   color:white;
   background-color: rgb(74, 74, 74);
   margin-top: 3%;
-  padding-left: 7%;
+  padding-left:7%;
   font-size: 30px;
   padding-top: 3%;
   margin-bottom: 3%;
 }
 
-
 /*UP TEXT SECTION AT BOTTOM OF PORTFOLIO*/
 .nextPort{
   font-size:18px;
+  text-align: right;
 }
 
 .arrowAndText{
@@ -43,7 +43,7 @@
 }
 
 .processSectionTitleUpNext{
-  padding-left: 6%;
+  padding-left: 3%;
   width:100%;
   height:110px;
   color:white;
@@ -54,10 +54,6 @@
   text-align: left;
 }
 
-/*Up next for Tier 5 only */
-.processSectionTitleUpNextTier{
-
-}
 /*tier 5 only*/
 @media screen (max-width: 768px) {
   .processSectionTitleUpNextTier{
@@ -65,20 +61,3 @@
       padding-bottom: 3%;
   }
 }
-
-/*Up next for WebMD only */
-/*.processSectionTitleUpNextWeb{
-
-}*/
-
-/*.nextportRight{
-float:right;
-padding-right: 15%;
-}
-
-@media screen (max-width: 767px) {
-  .nextportRight{
-      padding-right: 0%;
-      float:left;
-  }
-}*/
