--- a/tier5.css
+++ b/tier5.css
@@ -13,6 +13,7 @@
   width: 100%;
   height:450px;
   text-align: center;
+  margin-bottom: 3%;
 }
 
 .projectTitleSize{
@@ -22,7 +23,6 @@
 
 #projectTitle{
   color: white;
-  /*color: rgb(236,233,226);*/
 }
 
 .titleBackground{
@@ -34,15 +34,6 @@
   padding-top:15%;
   }
 
-  /*HOVER HULA*/
-
-  /*.containerOcto{
-    width: 250px;
-    text-align: center;
-    display:inline-block;
-    padding-top:1%;
-  }*/
-
 .image-swap img:last-child{display:none}
 .image-swap:hover img:first-child{display:none}
 .image-swap:hover img:last-child{display:inline-block}
@@ -50,13 +41,12 @@
 /*INTRODUCTION*/
 .introBoxes{
   text-align: center;
-  margin-top: 2%;
 }
 
 .introBox{
   display:inline-block;
-  width:320px;
-  height:320px;
+  width:350px;
+  /*height:350px;*/
   float:none;
   vertical-align: top;
 }
@@ -77,8 +67,8 @@ text-align: left;
 .ourProcessTitle{
   font-size: 30px;
   text-align: center;
-  margin-top:2%;
-  margin-bottom: 2%;
+  margin-top:3%;
+  margin-bottom: 3%;
 }
 
 .processCircleDiv{
@@ -120,12 +110,11 @@ display:inline-block;
 .ourApproachTitle{
 font-size: 30px;
 text-align: center;
-font-weight: bold;
 }
 
 .approach{
   text-align: center;
-  margin:5%;
+  margin:3% 3% 0 3%;
 }
 
 .approachSections{
@@ -161,6 +150,10 @@ display: inline-block;
   .approachText{
     width:90%;
   }
+}
+
+.processCircleFix{
+  margin-top: 0%;
 }
 
 /*STRATEGY:FUNNEL SECTION*/
@@ -464,7 +457,7 @@ text-align: center;
 
 .brain{
   padding-top:3%;
-  padding-bottom: 3%;
+  /*padding-bottom: 3%;*/
   width: 80%;
 }
 
@@ -756,6 +749,7 @@ border: 0;
 /*USER FLOW*/
 .bracketDiv{
   display: block;
+  margin-top: 4%;
 }
 .userBracket{
   margin:3%;
@@ -766,11 +760,15 @@ border: 0;
 .userFlowTitle{
   font-size: 24px;
   text-align: left;
-  margin-left: 17%;
+  /*margin-left: 17%;*/
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 8%;
 }
 
 .userFlow{
   text-align: center;
+  margin-top: 4%;
 }
 
 .userFlowImg{
@@ -876,12 +874,17 @@ text-align: center;
 /*row for bootstrap*/
 .featuresList{
   text-align: center;
-  width: 90%;
+  margin-top: 2%;
+  margin-bottom:2%;
 }
 
 .realTimeAndNur2{
   display:inline-block;
+  /*margin: 0 auto;*/
   text-align: center;
+  width:402px;
+  vertical-align: top;
+  margin: 2%;
 }
 
 .experienceTitleIcon{
