--- a/tier5.css
+++ b/tier5.css
@@ -733,11 +733,9 @@ border: 0;
 }
 
 .userFlowTitle{
-  font-size: 30px;
+  /*font-size: 30px;
   text-align: left;
-  /*margin-left: 17%;*/
-  text-align: center;
-  /*font-weight: bold;*/
+  text-align: center;*/
   margin-bottom: 8%;
 }
 
