--- a/tier5.css
+++ b/tier5.css
@@ -615,8 +615,8 @@ table{
 }
 
 .personaTypes{
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 30px;
+  /*font-weight: bold;*/
 }
 
 .textBoxName{
