--- a/about.css
+++ b/about.css
@@ -19,7 +19,7 @@
   /*margin-bottom: 10%;*/
   margin-left: 2%;
   height: auto;
-  top:195px;
+  top:265px;
   line-height: 225%;
 }
 .topQuote, .bottomQuote{
@@ -92,6 +92,57 @@ color: white !important;
   width: 27px;
 }
 
+/*APPROACH*/
+
+.processSectionTitleAbout{
+  background:rgb(234,231,231);
+  color: rgb(74,74,74);
+}
+.approachTitleAbout{
+  margin-top: 0%;
+}
+
+.approach{
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.approachSections{
+  margin:1%;
+}
+
+.approachCircle{
+  width:120px;
+  height:120px;
+  border-radius:50%;
+  background-color: rgb(154,16,112);
+  color:white;
+  position:relative;
+  vertical-align: top;
+  display: inline-block;
+  font-size:24px;
+  padding-top:43px;
+  margin-right: 1%;
+}
+
+.approachPointsAbout{
+  padding-top: 21px;
+}
+
+.approachText{
+text-align: left;
+width:80%;
+display: inline-block;
+}
+
+.twoWordCircle{
+  padding-top: 25px;
+}
+
+.processCircleFix{
+  margin-top: 0%;
+}
+
 /*SKILLS TABLE*/
 .softDiv{
 text-align: center;
@@ -103,19 +154,9 @@ text-align: center;
   vertical-align: top;
 }
 
-.tableTitle{
-  background-color: rgb(74, 74, 74);
+.processSectionTitleAbout{
+    padding-left:6%;
 }
-
-.tableTitleP{
-  font-size: 40px;
-  color: white;
-  background-color: rgb(74, 74, 74);
-  height: 100px;
-  margin-left: 7%;
-  padding-top: 1.75%;
-}
-
 
 table{
   margin:20px;
@@ -128,9 +169,20 @@ th{
 td{
   height:50px;
 }
+
 .grade{
-    width:100px;
+  width:100px;
 }
+
+.tableTitleSkil{
+color: rgb(154,16,112);
+font-weight: normal;
+}
+
+/*.zebra{
+    background:rgb(234,231,231);
+}*/
+
 .method{
   width:180px;
 }
