--- a/tier5.css
+++ b/tier5.css
@@ -13,6 +13,7 @@
   width: 100%;
   height:450px;
   text-align: center;
+  -moz-text-align: center;
   margin-bottom: 3%;
 }
 
@@ -121,6 +122,7 @@ text-align: center;
   margin:2%;
 }
 
+
 .approachCircle{
   width:50px;
   height:50px;
@@ -185,6 +187,9 @@ display: inline-block;
   width: 300px;
 }
 /*STRATEGY:Competitor Table*/
+.tableGrandparent{
+  text-align: center;
+}
 
 .tableParent{
   text-align: center;
@@ -194,19 +199,12 @@ display: inline-block;
   margin-left: 8%;
   text-align: left;
 }
-/*
+
 @media screen (max-width: 767px) {
   .compTable{
-    width:100%;
-    text-align: left;
+    margin-left: 0%;
   }
-}*/
-/*
-@media screen (max-width: 767px) {
-  .tableParent{
-    text-align: left;
-  }
-}*/
+}
 
 .compTableTitle{
   font-size: 40px;
@@ -1103,6 +1101,7 @@ Before and After*/
 .buildText{
   width:90%;
   margin-left: 7%;
+  font-size: 18px;
 }
 
 .comparisons{
